added FB notation on figs and found some really cool distance dependent stuff

--- a/Manuscript/aa_kevin.bib
+++ b/Manuscript/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Sat, 27 May 2017.
+%% Created using Papers on Sun, 28 May 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -96,6 +96,13 @@ number = {2},
 pages = {362--371}
 }
 
+@article{Kuehn:2014wy,
+author = {Kuehn, Christian and Zschaler, Gerd and Gross, Thilo},
+title = {{Early warning signs for saddle-escape transitions in complex networks}},
+year = {2014},
+month = jan
+}
+
 @article{Guill:2011vx,
 author = {Guill, Christian and Reichardt, Benjamin and Drossel, Barbara and Just, Wolfram},
 title = {{Coexisting patterns of population oscillations: the degenerate Neimark-Sacker bifurcation as a generic mechanism.}},
@@ -115,6 +122,17 @@ year = {2017},
 volume = {47},
 pages = {365},
 month = jan
+}
+
+@article{Kuehn:2010p3380,
+author = {Kuehn, C. and Siegmund, S. and Gross, T},
+title = {{Dynamical analysis of evolution equations in generalized models}},
+journal = {IMA J. Appl. Math.},
+year = {2013},
+volume = {78},
+number = {5},
+pages = {1051--1077},
+month = sep
 }
 
 @article{Jonsson:2012io,
@@ -173,6 +191,16 @@ journal = {Advances in Ecological Research},
 year = {2015},
 volume = {52},
 pages = {1--17}
+}
+
+@article{Kuehn:2010p2591,
+author = {Kuehn, Christian},
+title = {{A mathematical framework for critical transitions: Bifurcations, fast-slow systems and stochastic dynamics}},
+journal = {Physica D},
+year = {2011},
+volume = {240},
+number = {12},
+pages = {1020--1035}
 }
 
 @article{Anderson1978,
@@ -716,6 +744,13 @@ pages = {877--885},
 month = sep
 }
 
+@article{Kuehn:2010tx,
+author = {Kuehn, C. and Siegmund, S. and Gross, T},
+title = {{On the dynamical analysis of evolution equations via generalized models}},
+journal = {Arxiv preprint arXiv:1012.4340},
+year = {2010}
+}
+
 @article{Holling:1973hr,
 author = {Holling, C S},
 title = {{Resilience and Stability of Ecological Systems}},
@@ -833,6 +868,17 @@ volume = {276},
 number = {1654},
 pages = {109--114},
 month = jan
+}
+
+@article{Kuehn:2011wb,
+author = {Kuehn, Christian},
+title = {{Time-Scale and Noise Optimality in Self-Organized Critical Adaptive Networks}},
+journal = {arXiv},
+year = {2011},
+eprint = {1110.5433v1},
+eprinttype = {arxiv},
+eprintclass = {nlin.AO},
+month = oct
 }
 
 @article{Schreiber:2010hv,
@@ -1467,6 +1513,17 @@ pages = {932--944},
 month = jul
 }
 
+@article{Kuehn:2011tz,
+author = {Kuehn, Christian and Gross, Thilo},
+title = {{Nonlocal Generalized Models of Predator-Prey Systems}},
+journal = {arXiv},
+year = {2011},
+eprint = {1105.3662v1},
+eprinttype = {arxiv},
+eprintclass = {math.DS},
+month = may
+}
+
 @article{Moore:2014hi,
 author = {Moore, Jonathan W and Yeakel, Justin D and Peard, Dean and Lough, Jeff and Beere, Mark},
 title = {{Life-history diversity and its importance to population stability and persistence of a migratory fish: steelhead in two large North American watersheds}},
@@ -1486,6 +1543,17 @@ volume = {171},
 number = {3},
 pages = {1407--1417},
 month = nov
+}
+
+@article{Ovaskainen:2017hr,
+author = {Ovaskainen, Otso and Tikhonov, Gleb and Dunson, David and Gr{\o}tan, Vidar and Engen, Steinar and Saether, Bernt-Erik and Abrego, Nerea},
+title = {{How are species interactions structured in species-rich communities? A new method for analysing time-series data}},
+journal = {Proc Biol Sci},
+year = {2017},
+volume = {284},
+number = {1855},
+pages = {20170768},
+month = may
 }
 
 @article{Schindler:2010he,
